welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
case (n,outsideMode) match {
	case (a,b) if (outsideMode==false && n>=1 && n<=10) => return true
	case (a,b) if (outsideMode==true && n<=1) => return true
	case (a,b) if (outsideMode==true && n>=10) => return true
	case (_,_) => return false
}
}
